@@ -316,11 +316,11 @@ cairo_surface_write_to_png_stream (cairo_surface_t *surface, SV *func, SV *data=
 
 #endif
 
-#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE (1, 5, 2) /* FIXME: 1.6 */
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE (1, 5, 8) /* FIXME: 1.6 */
 
-cairo_status_t cairo_surface_copy_page (cairo_surface_t *surface);
+void cairo_surface_copy_page (cairo_surface_t *surface);
 
-cairo_status_t cairo_surface_show_page (cairo_surface_t *surface);
+void cairo_surface_show_page (cairo_surface_t *surface);
 
 #endif
 
@@ -608,5 +608,17 @@ cairo_svg_surface_version_to_string (...)
 	}
     OUTPUT:
 	RETVAL
+
+#endif
+
+# --------------------------------------------------------------------------- #
+
+#if CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 5, 8) /* FIXME: 1.6 */
+
+MODULE = Cairo::Surface	PACKAGE = Cairo::Format	PREFIX = cairo_format_
+
+=for apidoc __function__
+=cut
+int cairo_format_stride_for_width (cairo_format_t format, int width);
 
 #endif
